<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GioNius</string>
    <string name="player_name_default">Anonymous</string>

    <!-- Main Menu Buttons -->
    <string name="button_play_text">Play</string>
    <string name="button_options_text">Options</string>
    <string name="button_highscore_text">High Scores</string>
    <string name="button_achievemnts_text">Achievements</string>
    <string name="button_credits_text">Credits</string>
    <string name="button_login_text">Login</string>

    <!-- Mode Menu Buttons -->
    <string name="button_mode_classic_text">Classic Mode</string>
    <string name="button_mode_blind_text">Blind Mode</string>

    <!-- Level Menu Buttons -->
    <string name="button_difficult_beginner_text">Beginner</string>
    <string name="button_difficult_easy_text">Easy</string>
    <string name="button_difficult_normal_text">Normal</string>
    <string name="button_difficult_hard_text">Hard</string>
    <string name="button_difficult_expert_text">Expert</string>
    <string name="button_difficult_genius_text">Genius</string>

    <!-- High Score Buttons -->
    <string name="button_score_clear">Clear score</string>

    <!-- Mode Game Descriptions -->
    <string name="mode_classic_text">Classic</string>
    <string name="mode_blind_text">Blind</string>

    <!-- Dialog messages -->
    <string name="dialog_confirm_game_exit">You are leaving the game and will lose your progress.</string>
    <string name="dialog_confirm_game_close">Do you really want to quit the game?</string>
    <string name="dialog_save_your_score">Save your score</string>

    <!-- Dialog Buttons -->
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_save">Save</string>

    <!-- Activities Titles -->
    <string name="title_activity_game_beginner">GameBeginnerActivity</string>
    <string name="title_activity_game_easy">GameEasyActivity</string>
    <string name="title_activity_game_normal">GameNormalActivity</string>
    <string name="title_activity_game_hard">GameHardActivity</string>
    <string name="title_activity_game_expert">GameExpertActivity</string>
    <string name="title_activity_game_genius">GameGeniusActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_splash">Splash</string>

    <!-- Game Screen Elements -->
    <string name="game_text_press_play">Press play to start</string>
    <string name="game_text_warning">Watch out...</string>
    <string name="game_text_success">You got it!</string>
    <string name="game_text_failure">You failed...</string>
    <string name="game_text_your_turn">Your turn</string>
    <string name="game_text_level">Level: </string>
    <string name="game_text_score">Score: </string>
    <string name="game_text_mode">Mode: </string>
    <string name="game_dialog_your_score">Your score: </string>

    <!-- Hints -->
    <string name="hint_your_name">Your Name</string>

    <!-- High Score Screen Elements -->
    <string name="score_empty_list">No record</string>

    <!-- Winner Screen -->
    <string name="you_win">You won!</string>

    <!-- Credits Content Text -->
    <string name="credits_text">
        Developed by <b>Giovanne Almeida</b>\n\n\n\n
        <b>Thanks to:\n\n</b>
        <b><u>Professor Susana Marrero</u></b>\n\n<i>who taught me how to write my first codes in Programming I</i>\n\n
        <b><u>Professor Jorge Lima</u></b>\n\n<i>who idealized the project</i>\n\n
        <b><u>Emily Washburn</u></b>\n\n<i>who helped with translations to English</i>\n\n
        <b><u>Amanda Gonzaga</u></b>\n\n<i>who helped with translations to Spanish</i>\n\n
        <b><u>Cristian Gilles</u></b>\n\n<i>who helped with translations to French</i>\n\n
        <b><u>Boya Wang</u></b>\n\n<i>who helped with translations to Chinese</i>\n\n
    </string>

    <!-- Options Screen -->
    <string name="label_game_speed">Game Speed</string> <!-- -S-e-e-k_B-a-r- Radio Group -->
    <string name="hint_label_game_speed">Sets the game speed</string>
    <string name="label_note_mode">Note Mode</string>
    <string name="label_note_name">Note Names</string>
    <string name="hint_label_note_name">Show notes as <i>DO-RE-MI-FA-SOL-LA-TI</i></string>
    <string name="label_note_letters">Letters</string>
    <string name="hint_label_note_letters">Show notes as <i>C-D-E-F-G-A-B</i></string>
    <string name="label_speed_very_slow">Very Slow</string>
    <string name="label_speed_slow">Slow</string>
    <string name="label_speed_normal">Normal</string>
    <string name="label_speed_fast">Fast</string>
    <string name="label_speed_very_fast">Very Fast</string>
    <string name="label_seconds">seconds</string>
    <string name="label_home_button_press">When Home is pressed during a game</string> <!-- Radio Group -->
    <string name="hint_label_home_button_press">Defines what happens when the Home button is pressed during a game</string>
    <string name="label_minimize_app">Minimize</string> <!-- Radio Button -->
    <string name="hint_label_minimize_app">Gionius keep running on background</string>
    <string name="label_close_app">Close</string> <!-- Radio Button -->
    <string name="hint_label_close_app">The game is finished and current score is lost</string>
    <string name="label_immediate_start">Immediate start</string> <!-- Check Box -->
    <string name="hint_label_immediately_start">If checked, you don\'t have to press the Play button to start a game</string>
    <string name="label_show_messages">Show messages</string> <!-- Check Box -->
    <string name="hint_label_show_messages">If checked, messages will be shown during a game</string>
    <string name="label_show_note_names">Show note names</string> <!-- Check Box -->
    <string name="hint_label_show_note_names">If checked, the note names will be displayed</string>
    <string name="label_ring_bell">Ring the bell</string> <!-- Check Box -->
    <string name="hint_label_ring_bell">If checked, the bell will ring indicating your turn</string>

    <!-- Ocidental Note Names -->
    <string name="c_note">C</string>
    <string name="d_note">D</string>
    <string name="e_note">E</string>
    <string name="f_note">F</string>
    <string name="g_note">G</string>
    <string name="a_note">A</string>
    <string name="b_note">B</string>

    <!-- Guido d'Arezzo Note Names -->
    <string name="do_note">DO</string>
    <string name="re_note">RE</string>
    <string name="mi_note">MI</string>
    <string name="fa_note">FA</string>
    <string name="sol_note">SOL</string>
    <string name="la_note">LA</string>
    <string name="ti_note">TI</string>

    <!-- Google Play Games ID -->
    <string name="app_id">856266497368</string>
</resources>
