<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black">

    <Button
        android:id="@+id/btnPlay"
        android:text="@string/button_play_text"
        style="@style/ButtonDefault"/>

    <Button
        android:id="@+id/btnHighScores"
        android:layout_below="@id/btnPlay"
        android:text="@string/button_highscore_text"
        style="@style/ButtonDefault"/>

    <Button
        android:id="@+id/btnAchievements"
        android:layout_below="@id/btnHighScores"
        android:text="@string/button_achievemnts_text"
        style="@style/ButtonDefault"/>

    <Button
        android:id="@+id/btnOptions"
        android:layout_below="@id/btnAchievements"
        android:text="@string/button_options_text"
        style="@style/ButtonDefault" />

    <Button
        android:id="@+id/btnCredits"
        android:layout_below="@id/btnOptions"
        android:text="@string/button_credits_text"
        style="@style/ButtonDefault"/>

    <!--<Button-->
        <!--android:id="@+id/btnLoginPlayGames"-->
        <!--android:layout_below="@id/btnCredits"-->
        <!--android:drawableRight="@drawable/ic_play_games_login"-->
        <!--android:drawablePadding="0dp"-->
        <!--android:text="@string/button_login_text"-->
        <!--style="@style/ButtonDefault"/>-->
    <ImageButton
        android:id="@+id/btnLoginPlayGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_play_games_login"/>
</RelativeLayout>
