<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBeginnerDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_beginner_text"
                android:layout_margin="8dp"
                android:drawableBottom="@drawable/ic_beginner"
                style="@style/ButtonDefault"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnNormalDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_normal_text"
                android:layout_margin="8dp"
                android:drawableBottom="@drawable/ic_normal"
                style="@style/ButtonDefault"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnExpertDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_expert_text"
                android:layout_margin="8dp"
                android:drawablePadding="8dp"
                android:drawableBottom="@drawable/ic_expert"
                style="@style/ButtonDefault"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnEasyDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_easy_text"
                android:layout_margin="8dp"
                android:drawableBottom="@drawable/ic_easy"
                style="@style/ButtonDefault"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnHardDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_hard_text"
                android:layout_margin="8dp"
                android:drawableBottom="@drawable/ic_hard"
                style="@style/ButtonDefault"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnGeniusDifficult"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@drawable/button_text_default"
                android:text="@string/button_difficult_genius_text"
                android:layout_margin="8dp"
                android:drawableBottom="@drawable/ic_genius"
                style="@style/ButtonDefault"
                android:padding="8dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>