<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.giog.gioniusgeneration.GameEasyActivity">

    <RelativeLayout
        android:id="@+id/rlInfoPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvLevel"
            android:text="@string/game_text_level"
            style="@style/textGameScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvScore"
            android:text="@string/game_text_score"
            style="@style/textGameScreen"
            android:layout_below="@id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvGameMode"
            android:text="@string/game_text_mode"
            style="@style/textGameScreen"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imPlaySample"
        style="@style/ButtonPlaySample"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <TextSwitcher
        android:id="@+id/tsStatus"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:inAnimation="@anim/abc_fade_in"
        android:outAnimation="@anim/abc_fade_out">

    </TextSwitcher>

    <RelativeLayout
        android:id="@+id/rlButtonPanel"
        android:layout_below="@id/rlInfoPanel"
        android:layout_above="@id/imPlaySample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/llFirstCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnRed"
                style="@style/ButtonPlayRed"/>

            <ImageButton
                android:id="@+id/btnGreen"
                style="@style/ButtonPlayGreen"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSecondCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/llFirstCol"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnYellow"
                style="@style/ButtonPlayYellow"/>

            <ImageButton
                android:id="@+id/btnGray"
                style="@style/ButtonPlayGray"/>

            <ImageButton
                android:id="@+id/btnOrange"
                style="@style/ButtonPlayOrange"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llThirdCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/llSecondCol"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBlue"
                style="@style/ButtonPlayBlue"/>

            <ImageButton
                android:id="@+id/btnPink"
                style="@style/ButtonPlayPink"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
